feat: preserve task plans during smart import
Changed smart import behavior to retain existing task plans instead of clearing them. This allows plans to carry forward to the next day rather than requiring re-entry.

--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                             project: rawProject,
                             task: rawTask, // Keep the old task name
                             status: rawStatus, // Keep old status (user can update it)
-                            plan: '', // Clear plan (it's a new day)
+                            plan: rawPlan, // Keep the old plan
                             blockers: rawBlocker
                         });
                     }
